Collects the average speed at the end of the simulation.